--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "clean": "node_modules/.bin/bazel clean",
-    "build": "node_modules/.bin/bazel build npm_dist",
+    "build": "node_modules/.bin/bazel build npm_dist && unzip -o bazel-bin/npm_dist.zip -d codelab-elements/build",
     "test": "node_modules/.bin/bazel test --test_output=all codelab-elements/demo:hello_test",
-    "pub": "npm run clean && npm run build && cd bazel-genfiles && unzip npm_dist.zip -d npm_dist && npm publish npm_dist"
+    "pub": "npm run clean && npm run build && cd bazel-genfiles && unzip npm_dist.zip -d npm_dist && npm publish npm_dist",
+    "demo": "cd claat && go build -o bin/claat.exe && cd ..\\sample && ..\\claat\\bin\\claat.exe export test-all-features.md && ..\\claat\\bin\\claat.exe serve"
   },
   "author": "Google",
   "repository": {
@@ -16,6 +17,9 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "@bazel/bazel": "^0.18.1"
+    "@bazel/bazelisk": "^1.23.1"
+  },
+  "dependencies": {
+    "@bazel/bazel": "^2.1.0"
   }
 }
