--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "codelab-elements",
+  "name": "codelab-tools",
   "version": "1.0.1",
-  "description": "Custom elements for codelabs",
-  "main": "index.js",
+  "description": "Tools for authoring and publishing Google Codelabs",
   "scripts": {
     "clean": "node_modules/.bin/bazel clean",
     "build": "node_modules/.bin/bazel build npm_dist && unzip -o bazel-bin/npm_dist.zip -d codelab-elements/build",
@@ -10,10 +9,10 @@
     "pub": "npm run clean && npm run build && cd bazel-genfiles && unzip npm_dist.zip -d npm_dist && npm publish npm_dist",
     "demo": "cd claat && go build -o bin/claat.exe && cd ..\\sample-codelabs && ..\\claat\\bin\\claat.exe export -prefix ../../codelab-elements/build test-all-features.md"
   },
-  "author": "Google",
+  "author": "Google (original), Bit-Blazer (fork maintainer)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/googlecodelabs/tools.git"
+    "url": "https://github.com/Bit-Blazer/codelab-tools.git"
   },
   "license": "Apache-2.0",
   "devDependencies": {
